--- a/src/assets/scss/base/_theme_default.scss
+++ b/src/assets/scss/base/_theme_default.scss
@@ -70,6 +70,7 @@ body {
             width: auto;
             height: calc(100% - 65px);
             padding-bottom: 8px;
+            overflow-y: auto; // todo main.js
 
 
 
