--- a/src/assets/scss/components/_timeline.scss
+++ b/src/assets/scss/components/_timeline.scss
@@ -8,6 +8,7 @@
   overflow-y: hidden;
 
   .year {
+    padding-top: 8px;
     height: 100%;
     display: grid;
     grid-template-columns: 60px 220px 220px 220px 220px 220px 220px 220px 220px 220px 220px 220px 220px;
