--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2704,58 +2704,51 @@ body .wrapper .content ::-webkit-scrollbar-button {
 
 .pnl_top {
   display: grid;
-  height: max-content;
   grid-auto-flow: column;
   grid-auto-columns: max-content;
   grid-auto-rows: 1fr;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 19px;
+  grid-template-rows: calc(100% - 19px) 19px;
   gap: 0px 0px;
-  height: 100%;
+  max-height: 100%;
   grid-template-areas: "contributions" "line";
 }
 .pnl_top .contributions {
   grid-area: contributions;
+}
+.pnl_top .contributions .contributions_cont {
   border: 1px solid #77716A;
   border-radius: 10px;
-  padding: 8px 2px 4px 8px;
+  padding: 8px 4px 4px 8px;
   background: rgba(119, 113, 106, 0.04);
-  height: min-content;
+  height: 100%;
   max-height: 100%;
-  align-self: end;
+  overflow: hidden;
 }
-.pnl_top .contributions .listcards {
-  width: 100%;
-  height: auto;
-  max-height: 320px;
-  padding-right: 2px;
-  overflow-y: auto;
-  /* total width */
-  /* background of the scrollbar except button or resizer */
-  /* scrollbar itself */
-  /* set button(top and bottom of the scrollbar) */
-}
-.pnl_top .contributions .listcards .cards_contr {
-  width: 100%;
+.pnl_top .contributions .contributions_cont .inner_content {
   height: 100%;
   overflow-y: auto;
-  padding-right: 4px;
+  padding-right: 2px;
 }
-.pnl_top .contributions .listcards ::-webkit-scrollbar {
-  background-color: #FDF4E7;
-  height: 4px;
+.pnl_top .contributions .contributions_cont .inner_content .listcards {
+  width: 100%;
+  height: auto;
+  padding-right: 1px;
+}
+.pnl_top .contributions .contributions_cont .inner_content ::-webkit-scrollbar {
   width: 4px;
+  background-color: #FDF4E7;
   border-radius: 2px;
 }
-.pnl_top .contributions .listcards ::-webkit-scrollbar-track {
+.pnl_top .contributions .contributions_cont .inner_content ::-webkit-scrollbar-track {
   background-color: #FDF4E7;
   border-radius: 4px;
 }
-.pnl_top .contributions .listcards ::-webkit-scrollbar-thumb {
+.pnl_top .contributions .contributions_cont .inner_content ::-webkit-scrollbar-thumb {
   background-color: #77716A;
   border-radius: 4px;
 }
-.pnl_top .contributions .listcards ::-webkit-scrollbar-button {
+.pnl_top .contributions .contributions_cont .inner_content ::-webkit-scrollbar-button {
   display: none;
 }
 .pnl_top .line {
@@ -2769,9 +2762,9 @@ body .wrapper .content ::-webkit-scrollbar-button {
   grid-auto-columns: max-content;
   grid-auto-rows: 1fr;
   grid-template-columns: 1fr;
-  grid-template-rows: 19px 1fr;
+  grid-template-rows: 19px calc(100% - 19px);
   gap: 0px 0px;
-  height: 100%;
+  max-height: 100%;
   grid-template-areas: "line" "needs";
 }
 .pnl_btm .line {
@@ -2780,47 +2773,42 @@ body .wrapper .content ::-webkit-scrollbar-button {
 }
 .pnl_btm .needs {
   grid-area: needs;
+}
+.pnl_btm .needs .needs_cont {
   border: 1px solid #77716A;
   border-radius: 10px;
-  padding: 8px 2px 4px 8px;
-  height: calc(100% - 16px);
+  padding: 8px 4px 4px 8px;
   background: rgba(119, 113, 106, 0.04);
-  height: min-content;
+  height: auto;
   max-height: 100%;
-  /* total width */
-  /* background of the scrollbar except button or resizer */
-  /* scrollbar itself */
-  /* set button(top and bottom of the scrollbar) */
+  overflow: hidden;
 }
-.pnl_btm .needs ::-webkit-scrollbar {
+.pnl_btm .needs .needs_cont .inner_content {
+  height: 100%;
+  overflow-y: auto;
+  padding-right: 2px;
+}
+.pnl_btm .needs .needs_cont .inner_content .listcards {
+  width: 100%;
+  height: auto;
+  padding-right: 1px;
+}
+.pnl_btm .needs .needs_cont .inner_content ::-webkit-scrollbar {
   background-color: #FDF4E7;
   height: 4px;
   width: 4px;
   border-radius: 2px;
 }
-.pnl_btm .needs ::-webkit-scrollbar-track {
+.pnl_btm .needs .needs_cont .inner_content ::-webkit-scrollbar-track {
   background-color: #FDF4E7;
   border-radius: 4px;
 }
-.pnl_btm .needs ::-webkit-scrollbar-thumb {
+.pnl_btm .needs .needs_cont .inner_content ::-webkit-scrollbar-thumb {
   background-color: #77716A;
   border-radius: 4px;
 }
-.pnl_btm .needs ::-webkit-scrollbar-button {
+.pnl_btm .needs .needs_cont .inner_content ::-webkit-scrollbar-button {
   display: none;
-}
-.pnl_btm .needs .listcards {
-  width: 100%;
-  height: auto;
-  max-height: 350px;
-  padding-right: 2px;
-  overflow-y: auto;
-}
-.pnl_btm .needs .listcards .cards_contr {
-  width: 100%;
-  height: 100%;
-  overflow-y: auto;
-  padding-right: 4px;
 }
 
 .card_lgnd0 {
