--- a/src/assets/scss/components/_needs.scss
+++ b/src/assets/scss/components/_needs.scss
@@ -4,9 +4,9 @@
   grid-auto-columns: max-content;
   grid-auto-rows: 1fr;
   grid-template-columns: 1fr;
-  grid-template-rows: 19px 1fr;
+  grid-template-rows: 19px calc(100% - 19px);
   gap: 0px 0px;
-  height: 100%;
+  max-height: 100%;
   grid-template-areas:
     "line"
     "needs";
@@ -18,50 +18,47 @@
 
   .needs {
     grid-area: needs;
-    border: 1px solid $clr1;
-    border-radius: 10px;
-    padding: 8px 2px 4px 8px;
-    height: calc(100% - 16px);
-    background: rgba(119, 113, 106, 0.04);
-    height: min-content;
-    max-height: 100%;
 
-    /* total width */
-    ::-webkit-scrollbar {
-      background-color: $clr2;
-      height: 4px;
-      width: 4px;
-      border-radius: 2px;
-    }
-
-    /* background of the scrollbar except button or resizer */
-    ::-webkit-scrollbar-track {
-      background-color: $clr2;
-      border-radius: 4px;
-    }
-
-    /* scrollbar itself */
-    ::-webkit-scrollbar-thumb {
-      background-color: $clr1;
-      border-radius: 4px;
-    }
-
-    /* set button(top and bottom of the scrollbar) */
-    ::-webkit-scrollbar-button {
-      display: none;
-    }
-
-    .listcards {
-      width: 100%;
+    .needs_cont {
+      border: 1px solid $clr1;
+      border-radius: 10px;
+      padding: 8px 4px 4px 8px;
+      background: rgba(119, 113, 106, 0.04);
       height: auto;
-      max-height: 350px;
-      padding-right: 2px;
-      overflow-y: auto;
-      .cards_contr {
-        width: 100%;
+      max-height: 100%;
+      overflow: hidden;
+
+      .inner_content {
         height: 100%;
         overflow-y: auto;
-        padding-right: 4px;
+        padding-right: 2px;
+
+        .listcards {
+          width: 100%;
+          height: auto;
+          padding-right: 1px;
+        }
+
+        ::-webkit-scrollbar {
+          background-color: $clr2;
+          height: 4px;
+          width: 4px;
+          border-radius: 2px;
+        }
+
+        ::-webkit-scrollbar-track {
+          background-color: $clr2;
+          border-radius: 4px;
+        }
+
+        ::-webkit-scrollbar-thumb {
+          background-color: $clr1;
+          border-radius: 4px;
+        }
+
+        ::-webkit-scrollbar-button {
+          display: none;
+        }
       }
     }
   }
