Styles toggle btns of New Advocacy Tracking ToolNew Advocacy Tracking Tool

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -46,9 +46,9 @@
     max-width: 93%;
   }
   .helper_text {
-    visibility: hidden;
+    //visibility: hidden;
     width: 100%;
-    height: 0;// dinamic= auto
+    height: auto;// dinamic= auto
     padding: 0 0 0 16px;
     font-size: 12px;
     line-height: 16px;
