--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -132,7 +132,7 @@
   background-color: #fff;
 }
 
-.d_lgnd8_g {
+.lgnd8_g {
   color: #fff;
   background-color: #4073FF !important;
 }
@@ -5297,9 +5297,8 @@ input:checked + .slider:before {
   max-width: 93%;
 }
 .fields .helper_text {
-  visibility: hidden;
   width: 100%;
-  height: 0;
+  height: auto;
   padding: 0 0 0 16px;
   font-size: 12px;
   line-height: 16px;
