--- a/src/assets/scss/abstract/_settings.scss
+++ b/src/assets/scss/abstract/_settings.scss
@@ -177,7 +177,7 @@ $shadow-lb: -3px 3px 15px -3px rgba(0, 0, 0, 0.1);
     background-color: $color_2;
 }
 
-.d_lgnd8_g {
+.lgnd8_g {
     color: $color_2;
     background-color: $color_6!important;
 }
