--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -4016,7 +4016,7 @@ label.checkbox.lgnd7 span {
 }
 .scrim .dlg_new {
   width: 600px;
-  height: max-content;
+  height: auto;
   max-height: 90vh;
   margin: 0 auto;
   display: grid;
@@ -4164,7 +4164,7 @@ label.checkbox.lgnd7 span {
 .scrim .dlg_new .dlg_cnt .cnt_sections .sections {
   width: 100%;
   height: 100%;
-  max-height: 480px;
+  max-height: calc(100vh - 400px);
   overflow-y: auto;
   overflow-x: hidden;
   padding: 0 8px 16px;
