--- a/src/assets/scss/components/_dialogs.scss
+++ b/src/assets/scss/components/_dialogs.scss
@@ -511,7 +511,7 @@
 
   .dlg_new {
     width: 600px;
-    height: max-content;
+    height: auto;
     max-height: 90vh;
     margin: 0 auto;
     display: grid;
@@ -691,7 +691,7 @@
         .sections {
           width: 100%;
           height: 100%;
-          max-height: 480px;
+          max-height: calc(100vh - 400px);
           overflow-y: auto;
           overflow-x: hidden;
           padding: 0 8px 16px;
