--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2779,7 +2779,7 @@ body .wrapper .content ::-webkit-scrollbar-button {
   border-radius: 10px;
   padding: 8px 4px 4px 8px;
   background: rgba(119, 113, 106, 0.04);
-  height: auto;
+  height: 97%;
   max-height: 100%;
   overflow: hidden;
 }
