--- a/src/assets/scss/components/_needs.scss
+++ b/src/assets/scss/components/_needs.scss
@@ -24,7 +24,7 @@
       border-radius: 10px;
       padding: 8px 4px 4px 8px;
       background: rgba(119, 113, 106, 0.04);
-      height: auto;
+      height: 97%;
       max-height: 100%;
       overflow: hidden;
 
