--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -400,7 +400,7 @@ body .wrapper .content ::-webkit-scrollbar-button {
 .timeline .year {
   height: 100%;
   display: grid;
-  grid-template-columns: 60px 220px 220px 220px 220px 220px 220px 220px 220px 220px 220px 220px 220px;
+  grid-template-columns: 60px repeat(12, 220px);
   grid-template-rows: 36px calc(50% - 58px) 44px calc(50% - 22px);
   gap: 0px 0px;
   grid-auto-flow: row;
