--- a/src/assets/scss/base/_theme_default.scss
+++ b/src/assets/scss/base/_theme_default.scss
@@ -66,12 +66,9 @@ body {
         }
         
         .content {
-            padding: 8px 16px 0;
+            padding: 8px 16px 8px;
             width: auto;
             height: calc(100% - 65px);
-            padding-bottom: 8px;
-
-
 
             /* total width */
             ::-webkit-scrollbar {
