--- a/src/assets/scss/components/_timeline.scss
+++ b/src/assets/scss/components/_timeline.scss
@@ -4,13 +4,12 @@
   display: flex;
   flex-direction: row;
   padding-bottom: 8px;
-  overflow-y: auto;
   overflow-y: hidden;
 
   .year {
     height: 100%;
     display: grid;
-    grid-template-columns: 60px 220px 220px 220px 220px 220px 220px 220px 220px 220px 220px 220px 220px;
+    grid-template-columns: 60px repeat(12, 220px);
     grid-template-rows: 36px calc(50% - 58px) 44px calc(50% - 22px) ;
     gap: 0px 0px;
     grid-auto-flow: row;
